--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,6 +26,32 @@ code {
   grid-template-columns: repeat(1, minmax(200px, 1fr)); /*only 1 column and that column must be > 500px but < 1fr*/
 }
 
+.entry.new{
+  background-color: #a769f7;
+}
+
+textarea{
+  border: none;
+  resize: none;
+  background-color: #a769f7;
+}
+
+textarea:focus{
+  outline: none;
+}
+
+.save{
+  background-color: aquamarine;
+  border: none;
+  border-radius: 15px;
+  padding: 5px 10px 5px 10px;  
+}
+
+.save:hover{
+  background-color: rgb(186, 248, 227);
+  cursor: pointer;
+}
+
 .entry{
   background-color: #69f775;
   border-radius: 10px;
@@ -42,4 +68,5 @@ code {
 .entry-footer{
   display: flex;
   text-align: right; 
+  /*something with spacebetween*/
 }
