--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,7 +27,7 @@ code {
 }
 
 .entry{
-  background-color: #69f775;
+  background-color: #c085c0;
   border-radius: 10px;
   padding: 1rem;
   min-height: 170px;
