Search ruins Save

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -70,3 +70,21 @@ textarea:focus{
   text-align: right; 
   /*something with spacebetween*/
 }
+
+.search{
+  display: flex;
+  align-items: center;
+  background-color: rgb(230, 230, 230);
+  border-radius: 10px;
+  padding: 5px;
+  margin-bottom: 1.5em;
+}
+
+.search input{
+  border: none;
+  background-color: rgb(230, 230, 230);
+}
+
+.search input:focus{
+  outline: none;
+}
