--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -52,6 +52,13 @@ textarea:focus{
   cursor: pointer;
 }
 
+.reminder-entry{
+  background-color: #d5d5d5;
+  border-radius: 10px;
+  padding: 5px 10px 5px 10px; 
+  min-height: 170px;
+}
+
 .entry{
   background-color: #c085c0;
   border-radius: 10px;
