--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,9 +19,24 @@ code {
   padding-left: 15px;
 }
 
+.column{
+  /*stuff for two column structure*/
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
 .entry-list{
   display: grid;
-  grid-gap: 1rem; /*space between entries*/
+  grid-gap: 2rem; /*space between entries*/
   grid-template-columns: repeat(1, minmax(200px, 1fr)); /*only 1 column and that column must be > 500px but < 1fr*/
 }
 
@@ -81,7 +96,6 @@ textarea:focus{
 }
 
 .search{
-  display: flex;
   align-items: center;
   background-color: rgb(230, 230, 230);
   border-radius: 10px;
