--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -41,14 +41,16 @@ code {
 }
 
 .entry.new{
-  background-color: #a769f7;
+  border-style: solid;
+  border-color: rgba(106, 216, 179, 0.959);
+  background-color: white;
   grid-gap: 1rem;
 }
 
 textarea{
   border: none;
   resize: none;
-  background-color: #a769f7;
+  background-color: white;
 }
 
 textarea:focus{
@@ -56,7 +58,7 @@ textarea:focus{
 }
 
 .save{
-  background-color: aquamarine;
+  background-color: transparent;
   border: none;
   border-radius: 15px;
   padding: 5px 10px 5px 10px;  
@@ -68,7 +70,9 @@ textarea:focus{
 }
 
 .entry{
-  background-color: #c085c0;
+  background-color: white;
+  border-style: solid;
+  border-color: #a769f7;
   border-radius: 10px;
   padding: 1rem;
   min-height: 170px;
@@ -110,4 +114,16 @@ textarea:focus{
 
 .search input:focus{
   outline: none;
+}
+
+.delete {
+  background-color: transparent;
+  border: none;
+  border-radius: 15px;
+  padding: 5px 10px 5px 10px;  
+}
+
+.delete:hover{
+  background-color: rgba(106, 216, 179, 0.959);
+  cursor: pointer;
 }
