--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -69,14 +69,14 @@ textarea:focus{
 }
 
 .reminder{
-  background-color: #d5d5d5;
+  background-color: #ffffff;
   border-radius: 10px;
   padding: 5px 10px 5px 10px; 
   min-height: 170px;
 }
 
 .reminder-entry{
-  background-color: #d5d5d5;
+  background-color: #e2e2e2;
   border-radius: 10px;
   padding: 5px 10px 5px 10px; 
   min-height: 170px;
