--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -53,6 +53,7 @@ code {
 textarea{
   border: none;
   resize: none;
+  color: black;
   background-color: white;
 }
 
@@ -87,12 +88,13 @@ textarea:focus{
 }
 .entry-title{
   font-size: 40px;
-  font-family: "Times New Roman", Times, serif;
+  font-family: sans-serif;
 }
+
 
 .entry-description{
   font-size: 20px;
-  font-family: "Times New Roman", Times, serif;
+  font-family: sans-serif;
 }
 
 /*since the button is in the bottom, push it to the right*******************************why isnt it onthe right*/
@@ -107,6 +109,7 @@ textarea:focus{
   background-color: rgb(230, 230, 230);
   border-radius: 10px;
   padding: 5px;
+  margin-top: 1em;
   margin-bottom: .5em;
 }
 
@@ -127,6 +130,18 @@ textarea:focus{
 }
 
 .delete:hover{
-  background-color: rgba(106, 216, 179, 0.959);
+  background-color: rgb(186, 248, 227);
+  cursor: pointer;
+}
+
+.edit {
+  background-color: transparent;
+  border: none;
+  border-radius: 15px;
+  padding: 5px 10px 5px 10px;  
+}
+
+.edit:hover{
+  background-color: rgb(186, 248, 227);
   cursor: pointer;
 }
