--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -50,6 +50,14 @@ code {
   grid-gap: 1rem;
 }
 
+.tag-pop-up{
+  border-style: solid;
+  border-color: rgba(106, 216, 179, 0.959);
+  border-radius: 15em;
+  background-color: white;
+  grid-gap: 1rem;
+}
+
 .spacing{
   padding-top: 6rem;
 }
@@ -65,6 +73,10 @@ textarea:focus{
   outline: none;
 }
 
+entry-tag{
+  border: none;
+  border-radius: 15em;
+}
 .save{
   background-color: transparent;
   border: none;
@@ -73,6 +85,30 @@ textarea:focus{
 }
 
 .save:hover{
+  background-color: rgb(186, 248, 227);
+  cursor: pointer;
+}
+
+.add-tag{
+  background-color: transparent;
+  border: none;
+  border-radius: 15px;
+  padding: 5px 10px 5px 10px;  
+}
+
+.add-tag:hover{
+  background-color: rgb(186, 248, 227);
+  cursor: pointer;
+}
+
+.tag-button{
+  background-color: rgb(238, 186, 248);
+  border: none;
+  border-radius: 15px;
+  padding: 5px 10px 5px 10px;  
+}
+
+.tag-button:hover{
   background-color: rgb(186, 248, 227);
   cursor: pointer;
 }
