--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -193,7 +193,11 @@ textarea.entry-tag{
 }
 .entry-title{
   font-size: 40px;
-  font-family: sans-serif;
+  font-family: 'West VAR  ';
+  src: url('https://fontwerk.com/en/fonts/west') format('west');
+  font-weight: 125 950;
+  font-stretch: 75% 125%;
+  font-style: normal;
 }
 
 .entry-description{
