--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -62,6 +62,8 @@ code {
   border-radius: 15em;
   background-color: white;
   grid-gap: 1rem;
+  width: 50%;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
 }
 
 .entry-images img{
@@ -95,6 +97,7 @@ textarea:focus{
 textarea.entry-tag{
   border: none;
   border-radius: 15em;
+  background-color: transparent;
 }
 
 .save{
