--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -143,10 +143,17 @@ entry-tag{
 }
 
 .reminder-entry{
-  background-color: #e2e2e2;
+  background-color: white;
+  border-style: solid;
+  border-color: #7e5fa7;
   border-radius: 10px;
-  padding: 5px 10px 5px 10px; 
+  padding: 1rem;
   min-height: 170px;
+
+  /*put the edit button to be in the very bottom*/
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .entry{
