--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,8 @@ code {
     monospace;
 }
 
+
+
 .journal {
   margin-right: auto;
   margin-left: auto;
@@ -74,6 +76,8 @@ code {
   grid-gap: 1rem;
   width: 50%;
   box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+  display: inline-flex;
+  justify-content: space-between;
 }
 
 .entry-images img {
@@ -167,14 +171,14 @@ textarea.entry-tag {
 }
 
 .selected-tag {
-  background-color: aquamarine;
+  background-color: #98c1d9;
   border: none;
   border-radius: 15px;
   padding: 5px 10px 5px 10px;
 }
 
 .selected-tag:hover {
-  background-color: aquamarine;
+  background-color: lightcyan;
   cursor: pointer;
 }
 
@@ -256,6 +260,7 @@ textarea.entry-tag {
 .search input {
   border: none;
   background-color: transparent;
+  width: 90%;
 }
 
 .search input:focus {
